--- a/VL_Relapses_Analysis.Rmd
+++ b/VL_Relapses_Analysis.Rmd
@@ -20,17 +20,9 @@ Analysis and results:
 
 
 source("C:/Users/Rutuja Chhajed/OneDrive - Nexus365/IDDO/VL/Analysis/VL-Relapses/MA_extract_functions.R")
+df<-readRDS('C:/Users/Rutuja Chhajed/OneDrive - Nexus365/IDDO/VL/Analysis/VL-Relapses/Data/VLRelapse_MainDataset.RDS')
 
-df<-readRDS('C:/Users/Rutuja Chhajed/OneDrive - Nexus365/IDDO/VL/Analysis/VL-Relapses/Data/VLRelapse_Dataset.RDS') #Make sure to pick up the latest data file
 
-df$decade<-ifelse(df$pub_year<1990,"80s",ifelse(df$pub_year<2000,"90s",ifelse(df$pub_year<2010,"00s","10s")))
-df$st_type<-ifelse(df$st_allocation=="Randomised","R","NR")
-df$st_allocation<-NULL
-colnames(df)[colnames(df) == "relapse_method_for_analysis"] ="rel_diag"
-colnames(df)[colnames(df) == "cases_grouped"] ="inf_type"
-length(unique(df$pub_id))
-
-df<-subset(df,df$initial_cure>0)
 ```
 
 #2. General descriptive stats
@@ -40,46 +32,88 @@ df<-subset(df,df$initial_cure>0)
 4.	Total drug regimen and major ones
 
 ```{r}
+#Total patients treated, cured and relapsed
+df$relapse_total<-rowSums(df[,c('relapse_180','relapse_360')],na.rm = TRUE)
+sum(df$sa_num_tx) #Treated
+sum(df$initial_cure) #initially cured
+sum(df$relapse_180,na.rm = TRUE)#Relapsed at 6month
+sum(df$relapse_360,na.rm = TRUE)#Relapsed at 12 months
+sum(df$relapse_total,na.rm = TRUE)#Relapsed total
+
+
 #1.	No. of studies by region and %
 df %>% group_by(st_region) %>%summarise(pub_count= n_distinct(pub_id))
 df %>% group_by(st_region) %>%summarise(pub_prop= n_distinct(pub_id)/(0.01*length(unique(df$pub_id))))
 df %>% group_by(st_region) %>%summarise(arm_count= n_distinct(id))  
 
+
 #2.	No. of studies by follow-up duration, % (6 & 12)
 df %>% group_by(relapse_measurement_time) %>%summarise(count= n_distinct(pub_id))
-#Study 82 is double counted as 1 arm had follow-up till 6 months nad on e till 12 months.
+#Study 82 is double counted as 1 arm had follow-up till 6 months and one till 12 months.
+#7, 11, 88: Def cure at 8 & 9 months (not at 12 months)
 
 #3.	No. of studies by Relapse diagnosis method
 df %>% group_by(rel_diag) %>%summarise(pub_count= n_distinct(pub_id))
 df %>% group_by(rel_diag) %>%summarise(pub_prop= n_distinct(pub_id)/(0.01*length(unique(df$pub_id))))
 
-#By infection
+#4. No of studies By infection type
 df %>% group_by(inf_type) %>%summarise(pub_count= n_distinct(pub_id))
 df %>% group_by(inf_type) %>%summarise(pub_prop= n_distinct(pub_id)/(0.01*length(unique(df$pub_id))))
 
 ```
 
-a) Please add Tau-squared (or Tau) in addition to I-squared statistics, b) Please present 95% prediction intervals, and 3) Use Hartung-Knapp method for the estimation of random effects, and finally, 4) Only use random effects meta analysis, when there is at least 5 studies (i.e. 5 arms in our case). If there are <5 arms, then we present data from Fixed effect analysis
 
-a) Present Tau-squared (or Tau) (in addition to I-squared), b) also estimate 95% prediction intervals when possible, and 3) Use Hartung-Knapp method for estimation of Tau-squared for the random effects meta-analyses instead of the Inverse Variance/DerSimonian + Laird's method
-
-#3. Table 1: Estimates overall & by subgroups
+#3. Table 1: Estimates from Overall Meta anlaysis & by subgroups
 
 ##1) Overall
 ```{r include=FALSE}
 #1. Overall estimate at 6 months and overall 
+
 bias_pval<-NULL
 cat_name<-"Overall-6m"
 m<- metaprop(  data = df,  event =relapse_180,  n= initial_cure, method='GLMM',  sm = "PLOGIT",  hakn = TRUE, prediction=TRUE)
 summary(m)
 
-bias<-metabias(m,method.bias = "Egger")
+
 m_adj<-copas(m, gamma0.range=c(-2,5), gamma1.range=c(-1,2))
 overall_est<-m_extract(m_adj,cat_name)
+
+#Checking for bias using Egger's test and storing the values in bias_pval object
+bias<-metabias(m,method.bias = "Egger")
 bias_pval<-rbind(bias_pval,c(cat_name,bias$pval))
 bias_pval<-as.data.frame(bias_pval)
 table1<-overall_est
-rm(m,m_adj,bias, overall_est)
+rm(m_adj,bias, overall_est)
+```
+
+```{r}
+
+m_region<-update.meta(m, 
+            byvar=st_region, 
+            comb.random = TRUE,
+            comb.fixed = F)
+
+m_drug<-update.meta(m, 
+            byvar=drugcat, 
+            comb.random = TRUE,
+            comb.fixed = F)
+
+m_relapsemethod<-update.meta(m, 
+            byvar=rel_diag, 
+            comb.random = TRUE,
+            comb.fixed = F)
+
+
+m_casemix<-update.meta(m, 
+            byvar=inf_type, 
+            comb.random = TRUE, 
+            comb.fixed = F)
+
+
+m_decade<-update.meta(m, 
+            byvar=decade, 
+            comb.random = TRUE, 
+            comb.fixed = F)
 ```
 
 ##2) By region
@@ -345,7 +379,7 @@ rm(od1, od2, od3, od4, od5, od6, od7, od8, od9, od10, od11, od12, od13, od14, od
 
 relapsediagmethod<-unique(as.character(df$rel_diag))
 #Carrying meta analysis for all regions and storing them in mr1, mr2...
-for (i in 1:4){
+for (i in 1:5){
    rel<-relapsediagmethod[i]
    df_tmp<-subset(df,df$rel_diag==rel)
                m_tmp<- metaprop(data = df_tmp,  event =relapse_180,  n=initial_cure, 
@@ -394,11 +428,18 @@ cat_name=m_unadj$data$rel_diag[1]
 orel4<-m_extract0(m_unadj,cat_name)
 rm(m_unadj)
 
+m_adj<-copas(m_rel5, gamma0.range=c(-2,5), gamma1.range=c(-3,3))
+m_adj
+cat_name=m_adj$x$data$rel_diag[1]
+orel5<-m_extract(m_adj,cat_name)
+rm(m_adj)
 
-table1<-rbind(table1, orel1, orel2, orel3, orel4)
-rm(m_rel1, m_rel2, m_rel3, m_rel4)
-rm(orel1, orel2, orel3, orel4)
+table1<-rbind(table1, orel1, orel2, orel3, orel4,orel5)
+rm(m_rel1, m_rel2, m_rel3, m_rel4,m_rel5)
+rm(orel1, orel2, orel3, orel4,orel5)
 rm(relapsediagmethod)
+
+
 ```
 
 
@@ -416,7 +457,7 @@ for (i in 1:4){
                            method="GLMM", sm = "PLOGIT", hakn = TRUE,  prediction=TRUE)
               
                bias<-metabias(m_tmp,method.bias = "Egger",k.min=5)
-               bias_pval<-rbind(bias_pval,c(rel,bias$p.value))
+               bias_pval<-rbind(bias_pval,c(cm,bias$p.value))
                
                assign(paste0("m_case",i),m_tmp)
                rm(m_tmp,df_tmp,bias)}
@@ -557,9 +598,12 @@ rm(odec1, odec2, odec3, odec4)
 Focus on 19 studies with follow up duration of more than 6 months
 (make changes to Study #11)
 
-```{r}
-df_12mfu<-subset(df,!is.na(df$relapse_360))
+```{r message=FALSE, warning=FALSE, include=FALSE}
+#df_12mfu<-subset(df,!is.na(df$relapse_360))
+df_12mfu<-subset(df,df$relapse_measurement_time=="360")
 #or remove 180-360 studies? (8 arms)
+
+df_12mfu %>% group_by(st_region) %>% summarise(n_distinct(pub_id))
 length(unique(df_12mfu$pub_id))
 
 df_12mfu$relapse_total<-df_12mfu$relapse_180+df_12mfu$relapse_360
@@ -574,7 +618,7 @@ m_180<- metaprop(data =df_12mfu,event =relapse_180,  n=initial_cure,
                            method="GLMM", sm = "PLOGIT", hakn = TRUE,  prediction=TRUE)
 
 
-
+forest(m_360)
 m_adj<-copas(m_overall, gamma0.range=c(-2,5), gamma1.range=c(0,2))
 metabias(m_overall,method.bias = "Egger")
 cat_name<-"Long FU Overall"
@@ -615,10 +659,11 @@ events3<-df_12mfu %>%
     n_cured	= sum(initial_cure),
     n_totfu= sum(sa_num_tx))
 
-n_event<-c(events2[1,2], events1[1,2],events3[1,2])
+n_event<-c(events1[1,2], events2[1,2],events3[1,2])
 results_6vs12$relapse<-n_event
 table1<-rbind(table1,results_6vs12)
 
+Store_table1<-table1
 ```
 
 #5. Table 1 formatting
@@ -631,6 +676,15 @@ table1[, cols.num] <- lapply(table1[, cols.num, drop = FALSE],  function(x) x * 
 table1[, cols.num] <- lapply(table1[, cols.num, drop = FALSE],
                              function(x) round(x,1))
 
+table1$tausq<-round(table1$tausq,1)
+drugcat_names <-read_excel("C:/Users/Rutuja Chhajed/OneDrive - Nexus365/IDDO/VL/Analysis/VL-Relapses/Data/DrugCategories.xlsx", 
+    sheet = "drug cat full names")
+
+colnames(table1)[which(colnames(table1) == 'name')] <- 'drugcat'
+table1<-left_join(table1,drugcat_names,by="drugcat")
+table1$name<-ifelse(is.na(table1$`Drug Category`),table1$drugcat,table1$`Drug Category`)
+
+
 
 table1$unadj<-with(table1,paste0(est0,"% [95% CI: ",lb0,"%-",ub0,"%]"))
 table1$adj<-with(table1,paste0(est,"% [95% CI: ",lb,"%-",ub,"%]"))
@@ -639,7 +693,7 @@ table1$tcr<-with(table1,paste0(tot,"/",cured,"/",relapse))
 
 table1<-table1[,c("name","arms","tcr","unadj","tausq","i2","adj","pred")]
 
-#write.csv(t,'table4_0815.csv')
+write.csv(table1,'C:/Users/Rutuja Chhajed/OneDrive - Nexus365/IDDO/VL/Analysis/VL-Relapses/Results/Table1_0329.csv')
 
 ```
 
@@ -664,47 +718,80 @@ studies12m<- df_12mfu %>% group_by(pub_id) %>%
                           relapse_total = sum(relapse_total),relapse_180=sum(relapse_180),relapse_360=sum(relapse_360))
 
 
-studies12m$prop_180<-round((studies12m$relapse_180/studies12m$initial_cure),2)
-# calculate the confidence interval for the proportion
-studies12m$ci_180_lower <- apply(studies12m, 1, function(row) {
-  ci <- round(prop.test(row["relapse_180"], row["initial_cure"])$conf.int, 2)
-  return(ci[1])
-})
-studies12m$ci_180_upper <- apply(studies12m, 1, function(row) {
-  ci <- round(prop.test(row["relapse_180"], row["initial_cure"])$conf.int, 2)
-  return(ci[2])
-})
+prop_180<- metaprop(data=studies12m,event = relapse_180, n = initial_cure)
 
-
-studies12m$prop_6m<-with(studies12m,paste0(prop_180,"% [95% CI: ",ci_180_lower,"%-",ci_180_upper,"%]"))
+# create a data frame with the study ID, proportion, and 95% confidence interval
+result_180 <- data.frame(
+  study_id = prop_180$data$pub_id,
+  proportion = round((exp(prop_180$TE)/(1+exp(prop_180$TE)))*100,1),
+  lower_CI = round((prop_180$lower*100),1),
+  upper_CI = round((prop_180$upper*100),1))
 
 
 
 
-
-studies12m$prop_360<-round((studies12m$relapse_360/studies12m$initial_cure),2)
-
-
-# calculate the confidence interval for the proportion
-studies12m$ci_360_lower <- apply(studies12m, 1, function(row) {
-  ci <- round(prop.test(row["relapse_360"], row["initial_cure"])$conf.int, 2)
-  return(ci[1])
-})
-
-studies12m$ci_360_upper <- apply(studies12m, 1, function(row) {
-  ci <- round(prop.test(row["relapse_360"], row["initial_cure"])$conf.int, 2)
-  return(ci[2])
-})
+result_180$prop_6m<-with(result_180,paste0(proportion,"% [95% CI: ",lower_CI,"%-",upper_CI,"%]"))
 
 
-studies12m$prop_12m<-with(studies12m,paste0(prop_360,"% [95% CI: ",ci_360_lower,"%-",ci_360_upper,"%]"))
+
+prop_360<- metaprop(data=studies12m,event = relapse_360, n = initial_cure)
+
+# create a data frame with the study ID, proportion, and 95% confidence interval
+result_360 <- data.frame(
+  study_id = prop_360$data$pub_id,
+  proportion = round((exp(prop_360$TE)/(1+exp(prop_360$TE)))*100,1),
+  lower_CI = round((prop_360$lower*100),1),
+  upper_CI = round((prop_360$upper*100),1))
 
 
 
 
-studies12m$prop_total<-round((studies12m$relapse_total/studies12m$initial_cure),2)
-# calculate the proportion of relapses and confidence interval for each row
+result_360$prop_12m<-with(result_360,paste0(proportion,"% [95% CI: ",lower_CI,"%-",upper_CI,"%]"))
 
-#write.csv(df_6p_studies,"Studies_6plus_Est.csv")
+
+
+studies12m$prop_360<-result_360$prop_12m
+studies12m$prop_180<-result_180$prop_6m
+
+
+studies12m<-left_join(studies12m,df_12mfu[,c("pub_id","drugcat")],by='pub_id')
+drugcat_names <-read_excel("C:/Users/Rutuja Chhajed/OneDrive - Nexus365/IDDO/VL/Analysis/VL-Relapses/Data/DrugCategories.xlsx", 
+    sheet = "drug cat full names")
+
+studies12m<-left_join(studies12m,drugcat_names,by="drugcat")
+studies12m$drugcat<-NULL
+studies12m$drugcat1<-NULL
+write.csv(studies12m,"C:/Users/Rutuja Chhajed/OneDrive - Nexus365/IDDO/VL/Analysis/VL-Relapses/Results/Table4.csv")
+
+
+
+
+```
+
+```{r}
+
+df$st_type<-ifelse(df$st_allocation=="Randomised","R","NR")
+df %>% group_by(st_type) %>%summarise(pub_count= n_distinct(pub_id))
+
+m_type<-update.meta(m, 
+            byvar=st_type, 
+            comb.random = TRUE,
+            comb.fixed = F)
+
+
+```
+
+
+```{r}
+library('lme4')
+df$def_cure<-df$initial_cure-df$relapse_180
+df$pub_year_scaleed<-df$pub_year/1000
+df$inf_type<-relevel(df$inf_type,ref="Primary")
+model1<- glmer(cbind(relapse_180,def_cure) ~ inf_type +pub_year+ (1 | id), family = binomial, data = df)
+summary(model1)
+ci<-summary(model1)$coefficients[4,1]+qnorm(c(0.025,0.5,0.975))*summary(model1)$coefficients[4,2]
+round(exp(ci),2)
+
+
 ```
 
